--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <div class="container" style="margin-top: 100px;">
     <div class="row">
       <!-- This is text before the benefit bar -->
-      <div class="benefit-bar" >
+      <div class="benefit-bar-sd" >
         <div class="benefit" id="benefit-trust">
           <i class="streamline streamline-check-circle-2"></i>
           <div class="benefit-content">
