--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,8 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-  <div class="container" style="margin-top: 100px;">
+  <div style="height: 100px"></div>
+  <div class="container" >
     <div class="row">
       <!-- This is text before the benefit bar -->
       <div class="benefit-bar-sd" >
